<resources>
    <string name="app_name">Mortgage Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt">Choose terms</string>
    <string name="action_reset">Reset</string>
    <string name="textview_weight">2</string>
    <string name="edittext_weight">2</string>
    <string name="spinner_weight">2</string>
    <string name="state">State :</string>
    <string name="city">City :</string>
    <string name="zip_code">Zip code :</string>
    <string name="save">Save</string>
    <string name="calculate">CALCULATE</string>
    <string name="property_price">Property Price</string>
    <string name="street_address">Street Address :</string>
    <string name="property_type">Property Type :</string>
    <string name="save_this_property">Save this property</string>
    <string name="dollar">$</string>
    <string name="down_payment">Down Payment</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="terms">Terms :</string>
    <string name="annual_rate">Annual Rate(%)</string>
    <string name="enter_property_price_in">Enter property price in $</string>
    <string name="enter_down_payment_value">Enter down payment in $</string>
    <string name="enter_percentage_rate">Enter percentage rate</string>
    <string name="enter_zip_code">Enter ZIP code</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="enter_street_address">Enter street address</string>
    <string name="mortgage_str">Calculate Mortgage</string>
    <string name="map_str">Show Homes in Map</string>
    <string name="menu">MENU</string>
    <string name="todo">TODO</string>
    <string name="city_info">City :</string>
    <string name="street_address_info">Street Address :</string>
    <string name="home_type_info">Home Type :</string>
    <string name="home_price_info">Home Price :</string>
    <string name="down_payment_info">Down Payment :</string>
    <string name="annual_rate_info">Annual Rate (in %) :</string>
    <string name="terms_info">Terms :</string>
    <string name="monthly_payment_info">Monthly Payment :</string>
    <string name="loan_amount_info">Loan Amount :</string>
    <string name="delete_info">DELETE</string>
    <string name="edit_info">EDIT</string>

    <string-array
        name="terms">
        <item>15</item>
        <item>30</item>
    </string-array>
    <string-array
        name="propertytype">
        <item>House</item>
        <item>TownHouse</item>
        <item>Condo</item>
    </string-array>
    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
</resources>
